[package]
name = "portal"
version = "0.1.0"
edition = "2024"
description = "Quick switching between oh-my-opencode model providers"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = "0.4"
